eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 654654225050.dkr.ecr.eu-central-1.amazonaws.com/simplebank:918e3e743ab8fbaeb0e9f8454a47720cc3910fa5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-server
